--- a/homework2.ipynb
+++ b/homework2.ipynb
@@ -624,6 +624,22 @@
     "zero_coup=bonds_desc[['ISINCODE','CPN','CPN_DATE']][(bonds_desc['COUPONTYPE']=='Дисконт')]\n",
     "zero_coup.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Фидбэк:\n",
+    "# 1.Соединить Python c БД по API. + 1 балл\n",
+    "# 2.Из Python запросить информацию, необходимую для пункта 3. +1 балл\n",
+    "# Недостает типов ценных бумаг. \n",
+    "# 3.Написать функцию, которая строит матричные характеристики рейтинговых переходов. Аргументы функции: вид рейтинга, границы периода наблюдения. На выходе функция должна выдавать не только матрицу, но и значения аргументов. Привести иллюстрационный пример использования. \n",
+    "#  Попытка не предпинята. 0 баллов.\n",
+    "# 4. Предусмотреть исполнение SQL запроса из п.2 внутри функции из п. 3. Запрос должен храниться в выходных данных функции. 0 баллов.\n",
+    "# Текущая сумма: 2 балла."
+   ]
   }
  ],
  "metadata": {
